network-loadbalancer/istio-ingress/templates/istio-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingress
  namespace: j-hub
  labels:
    component: gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
#  - port:
#      number: 443
#      name: https-443
#      protocol: HTTPS
#    hosts:
#    - "*"
#    tls:
#      mode: SIMPLE # enables HTTPS on this port
#      credentialName: istio-ingress
